<resources>
    <string name="app_name" translatable="false">zooProject</string>
    <string name="zoo_map_title">Carte du zoo</string>
    <string name="tank_title">Aquarium</string>
    <string name="popcorn_title">Popcorn</string>
    <string name="map_welcome">Bienvenue</string>
    <string name="alert_popcorn">Pas de popcorn aux %1$s ( %2$03d %3$s ) !</string>
    <array name="popcorn_species">
        <item>poissons</item>
        <item>dauphins</item>
        <item>tortues</item>
        <item>beluga</item>
    </array>
    <plurals name="popcorn_seconds">
        <item quantity="one">seconde</item>
        <item quantity="other">secondes</item>
    </plurals>
    <string name="home_title" translatable="false">ZooProject</string>
    <string name="button_map">Carte</string>
    <string name="home_tvSubtileText">App Officielle</string>
    <string name="home_tvInfos">Bienvenue les gens dans notre <b>zoo</b> plutôt <i>chouette</i> de 12 000 km<sup><small>2</small></sup>.\nN\'hésitez pas à vous <b>taillez</b> la part du <u>lion</u>.\nEn cas de problème,ou d\'éléphant dans les boutiques de porcelaine, n\'ayez pas peur de donner votre langue au chat et contacter le +33 6 79 12 12 12</string>
    <string name="home_tvNews">Les news</string>
    <string name="stub" translatable="false">**********</string>
    <string name="alert_title">Alerte</string>
    <string name="alert_input_title">Intitulé</string>
    <string name="urgent">Urgent</string>
    <string name="alert_input_local">Lieu</string>
    <string name="alert_input_info">Informations</string>
    <string name="alert_btn_submit">Envoyer</string>

    <array name="places">
        <item>Enclos des ours</item>
        <item>Enclos des lions</item>
        <item>Aquarium</item>
        <item>Boutique de souvenirs</item>
    </array>
    <string name="alert_confimation">Voulez-vous envoyer cette alerte</string>
    <string name="title_activity_annuaire">Annuaire</string>
    <string name="title_name_column"><b>Nom</b></string>
    <string name="title_function_column"><b>Fonction</b></string>
    <string name="title_phone_column"><b>Téléphone</b></string>
    <string name="options">Options</string>
    <string name="specie_title">Espece</string>
    <string name="age_max">Age max</string>
    <string name="specie_form_name">Nom</string>
    <string name="submit">Enregistrer</string>
    <string name="confimation_save">Voulez-vous confirmer l\'enregistrement</string>
    <string name="nom">Nom</string>
    <string name="age">Age</string>
    <string name="date_arrive">Date d\'arrivée</string>
    <string name="box">Enclos</string>
    <string name="animals_title">Ajouter un animal</string>
    <string name="search">Rechercher</string>
</resources>