<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/alert_intitulé_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_input_title"
        android:labelFor="@id/alert_intitule_input" />

    <EditText
        android:id="@+id/alert_intitule_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:text="" />

    <TextView
        android:id="@+id/alert_lieu_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_input_local"
        android:labelFor="@id/alert_lieu_input" />

    <AutoCompleteTextView
        android:id="@+id/alert_lieu_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textAutoComplete"
        android:minHeight="48dp"
        android:text="" />

    <TextView
        android:id="@+id/alert_informations_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_input_info"
        android:labelFor="@id/alert_informations_input"/>

    <EditText
        android:id="@+id/alert_informations_input"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_weight="2"
        android:lines="8"
        android:ems="10"
        android:inputType="textCapSentences|textMultiLine"
        android:minHeight="48dp"
        android:text=""
        android:gravity="start|top"/>

    <CheckBox
        android:id="@+id/alert_urgent_CB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/urgent" />

    <Button
        android:id="@+id/alert_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_btn_submit"
        android:onClick="send"/>

</LinearLayout>