<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/animal_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/animal_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/animal_name_input"
                android:text="@string/nom" />

            <TextView
                android:id="@+id/animal_age_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/animal_age_input"
                android:text="@string/age" />

            <EditText
                android:id="@+id/animal_age_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="" />

            <TextView
                android:id="@+id/animal_arrivee_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/animal_arrivee_input"
                android:text="@string/date_arrive" />

            <DatePicker
                android:id="@+id/animal_arrivee_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:text="" />

            <TextView
                android:id="@+id/animal_specie_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/animal_specie_input"
                android:text="@string/specie_title" />

            <Spinner
                android:id="@+id/animal_specie_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"/>

            <TextView
                android:id="@+id/animal_box_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/animal_box_input"
                android:text="@string/box" />

            <Spinner
                android:id="@+id/animal_box_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/animal_save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>