<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/specie_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specie_form_name"
        android:labelFor="@id/specie_name_input"/>

    <EditText
        android:id="@+id/specie_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/specie_agemax_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age_max"
        android:labelFor="@id/specie_agemax_input"/>

    <EditText
        android:id="@+id/specie_agemax_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:minHeight="48dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/specie_form_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>