<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="0,1"
        android:stretchColumns="0,1">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name_column"
                android:padding="10dp"
                style="@style/entete"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_function_column"
                android:padding="10dp"
                style="@style/entete"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_phone_column"
                android:padding="10dp"
                style="@style/entete"/>
        </TableRow>
        <TableRow
            style="@style/table_raw"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dupont"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Directrice"
                android:padding="5dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="06 12 34 56 78"
                android:autoLink="phone"
                android:padding="5dp"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Durand"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Technicien de surface"
                android:gravity="center"
                android:padding="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="06 12 34 56 78"
                android:autoLink="phone"
                android:padding="5dp"/>
        </TableRow>
        <TableRow
            style="@style/table_raw">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Martin"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vétérinaire"
                android:gravity="center"
                android:padding="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="06 12 34 56 78"
                android:padding="5dp"
                android:autoLink="phone"/>
        </TableRow>
    </TableLayout>
</LinearLayout>